Fix #12 - Block only half visible on page

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@
 
 .block_metalink .felement {
     width: 65% !important;
-    margin-left: 33% !important;
 }
 
 .block_metalink .fitemtitle {
